name: dynamicT
version: 0.0.1
synopsis: Basic support for dynamic types, built on typeableT
description: Like Data.Dynamic, but with typeableT we don't require Unsafe.Coerce.
homepage: https://github.com/brprice/typeableT
license: BSD3
license-file: LICENSE
author: Ben Price
maintainer: Ben Price <bjmprice@gmail.com>
category: Data
build-type: Simple
cabal-version: >=1.2

library
  build-depends: base >= 4.4 && < 5,
                 typeableT >= 0.0 && < 0.1
  ghc-options: -Wall -fwarn-tabs
  exposed-modules: Data.DynamicT
  hs-source-dirs: src
