name: staticptr
version: 0.0.1
synopsis: Mock-up of improved static pointer support
description: The static pointer table actually stores TypeReps for the pointers, and these are used to ensure type-safety.
homepage: https://github.com/brprice/typeableT
license: BSD3
license-file: LICENSE
author: Ben Price
maintainer: Ben Price <bjmprice@gmail.com>
category: Data
build-type: Simple
cabal-version: >=1.2

library
  build-depends: base >= 4.4 && < 5,
                 binary >=0.7.1 && < 0.8,
                 bytestring  >= 0.10.0 && < 0.11,
--bytestring only for mockup of SPT
                 typeableT >= 0.0 && < 0.1,
                 dynamicT >= 0.0 && < 0.1
  ghc-options: -Wall -fwarn-tabs
  exposed-modules: Data.StaticPtr
  other-modules: Data.StaticPtr.Internals
                 Data.StaticPtr.SPT
  hs-source-dirs: src
